--- a/Services/Atelier-mobile-pour-poid-lourd.html
+++ b/Services/Atelier-mobile-pour-poid-lourd.html
@@ -121,17 +121,17 @@
     </header>
     <!-- End Header Section -->
 
-    <div data-src="../assets/img/banner/atelier-mobile-voiture.jpg" class="ak-bg">
+    <div data-src="../assets/img/banner/atelier-mobile-poid-lourd.jpg" class="ak-bg">
         <div class="ak-height-100 ak-height-lg-100"></div>
         <div class="ak-height-125 ak-height-lg-40"></div>
         <div class="container">
             <div class="common-page-title">
-                <h3 class="page-title">Atelier Mobile pour voiture</h3>
+                <h3 class="page-title">Atelier Mobile pour poid lourd</h3>
                 <div class="d-flex gap-2 align-items-center">
                     <a href="../index.html">Acceuil /</a>
                     <a href="../services.html">Nos Serivces /</a>
 
-                    <a href="">Atelier mobile pour voiture</a>
+                    <a href="">Atelier mobile pour poid lourd</a>
                 </div>
             </div>
         </div>
@@ -146,34 +146,33 @@
         <div class="sticky-content container">
             <div class="content">
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title text-center">1. Service Premium : Ateliers Mobiles pour Voitures</h4>
+                    <h4 class="single-blog-title text-center">1. Ateliers Mobiles pour Poids Lourds – L’Expertise Energy Tires au Service de Votre Flotte</h4>
                     <p class="single-blog-desp">
-                        Chez Energy Tires & Services, nous savons combien votre temps est précieux et à quel point il est essentiel de conserver votre véhicule en parfait état de fonctionnement. C’est dans cette optique que nous avons développé notre service d’Ateliers Mobiles pour voitures, une solution moderne et pratique qui vous permet de bénéficier d’un entretien automobile professionnel sans bouger de chez vous.<br>
-Que vous soyez à votre domicile, sur votre lieu de travail ou même sur le bord de la route, nos techniciens certifiés interviennent directement là où vous vous trouvez pour effectuer une large gamme de prestations mécaniques et techniques. Grâce à des véhicules entièrement équipés, nous vous garantissons une qualité de service identique à celle d’un atelier classique, mais avec le confort et la flexibilité du déplacement.<br>
-Ce service s’adresse aussi bien aux particuliers qu’aux professionnels souhaitant optimiser la gestion de leur flotte automobile. Notre objectif : vous faire gagner du temps, réduire vos contraintes logistiques, et vous assurer une expérience fluide et sécurisée, en toute confiance.<br>
-
+                        Chez Energy Tires & Services, nous comprenons que l’immobilisation d’un poids lourd peut représenter un coût important et impacter directement votre activité. C’est pourquoi nous avons développé un service d’ateliers mobiles dédiés aux poids lourds, pensé pour intervenir rapidement et efficacement là où vous en avez besoin – sur la route, sur chantier, en entrepôt ou dans vos locaux.<br>
+Grâce à nos unités mobiles ultra-équipées, nous sommes en mesure d’assurer une maintenance complète et des réparations mécaniques lourdes sur tous types de camions, remorques, bus ou engins industriels. Notre objectif est clair : réduire les temps d’arrêt de vos véhicules, assurer leur disponibilité continue, et vous offrir un service à la hauteur de vos exigences.<br>
+Nos techniciens spécialisés interviennent sur tout le territoire avec rigueur, expertise et réactivité, en respectant les normes de sécurité et les délais d’intervention. Avec Energy Tires & Services, vos véhicules lourds sont entre de bonnes mains – là où ils se trouvent.<br>
                     </p>
-                    <img src="../assets/img/Magasin/ateliermobile.webp" data-aos="fade-up" class="img-fluid" alt="...">
+                    <img src="../assets/img/Magasin/ateliermobilepoidlourd.jpg" data-aos="fade-up" class="img-fluid" alt="...">
                   
                 </div>
                 <div class="ak-height-50 ak-height-lg-50"></div>
                 <div class="single-blog-list" data-aos="fade-up">
-                    <h4 class="single-blog-title text-center">Pourquoi Choisir les Ateliers Mobiles Energy Tires ?</h4>
+                    <h4 class="single-blog-title text-center">Pourquoi faire confiance à nos Ateliers Mobiles pour Poids Lourds ?</h4>
                     <p class="single-blog-desp">
-                        <strong>Flexibilité et Confort Inégalés</strong>
-Fini les trajets au garage, les attentes interminables ou les plannings surchargés. Nos équipes se déplacent à l’heure et à l’endroit de votre choix, avec tout le matériel nécessaire pour entretenir ou réparer votre véhicule dans les meilleures conditions.<br>
-<strong>Technologie Avancée, Résultats Garantis</strong>
-Nos ateliers mobiles sont dotés des dernières innovations technologiques en matière de diagnostic, de réparation et d’entretien automobile. Vous bénéficiez d’un service aussi complet et efficace que dans un centre professionnel, mais dans votre propre environnement.<br>
-<strong>Intervention Express et Service Personnalisé</strong>
-Nos techniciens sont formés pour intervenir rapidement tout en maintenant un haut niveau de qualité. Chaque intervention est pensée pour s’adapter à vos besoins spécifiques, avec des délais réduits et une attention particulière à la satisfaction client.<br>
-<strong>Un Large Panel de Prestations</strong>
-Vidanges, changement de pneus, équilibrage, réparation mécanique, diagnostic électronique, remplacement de plaquettes ou batteries… Nous assurons tous les services essentiels pour garantir la fiabilité et la sécurité de votre voiture, où que vous soyez.<br>
-<strong>Transparence et Tarification Avantageuse</strong>
-Nos prix sont clairs, compétitifs et sans surprise. Vous profitez du savoir-faire Energy Tires & Services à des tarifs accessibles, tout en ayant la garantie d’un service professionnel, rapide et sécurisé.<br>
+                        <strong>Réactivité maximale & efficacité terrain</strong>
+                        Nos ateliers mobiles sont dotés d’équipements de dernière génération pour permettre des diagnostics précis, des réparations rapides et des interventions adaptées à tous types de pannes mécaniques ou électroniques.<br>
+<strong>Intervention sur site, partout et à tout moment</strong>
+Plus besoin de remorquer vos poids lourds vers un garage traditionnel. Nos équipes se déplacent directement à l’endroit de votre choix, vous faisant économiser du temps, de l’argent, et réduisant les interruptions de service.<br>
+<strong>Maintenance corrective & préventive</strong>
+En plus des dépannages, nous proposons des plans de maintenance préventive personnalisés pour éviter les pannes imprévues et allonger la durée de vie de vos véhicules.<br>
+<strong>Service flexible et disponibilité 24/7</strong>
+Parce que vos activités ne s’arrêtent jamais, notre équipe est disponible tous les jours, 24h/24, pour s’adapter à vos horaires, vos urgences et vos contraintes logistiques.<br>
+<strong>Expertise multimarques</strong>
+Nos techniciens sont formés, certifiés et expérimentés pour intervenir sur l’ensemble des marques et modèles de poids lourds, avec une exigence constante de qualité et de fiabilité.<br>
 
 
                     </p>
-                    <img src="../assets/img/Magasin/ateliermobile2.jpg" data-aos="fade-up" class="img-fluid" alt="...">
+                    <img src="../assets/img/Magasin/ateliermobilepoidlourd2.jpg" data-aos="fade-up" class="img-fluid" alt="...">
                   
                 </div>
 
