--- a/index.html
+++ b/index.html
@@ -511,37 +511,37 @@
             <div class="content style_2">
                 <div class="service">
                     <div class="service-card" data-aos="fade-left">
-                        <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="card-img">
+                        <a href="Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html" class="card-img">
                             <img src="assets/img/service_1.jpg" class="ak-bg" alt="...">
                         </a>
                         <div class="card-info">
-                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="card-title">Importation et distribution de pneumatique et lubrifiants moteur</a>
+                            <a href="Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html" class="card-title">Importation et distribution de pneumatique et lubrifiants moteur</a>
                             <p class="card-desp">Spécialiste de l’importation et de la distribution de pneus et lubrifiants moteur, nous vous offrons des produits de haute qualité adaptés à tous vos besoins. 
                                 Performance, durabilité et sécurité sont au cœur de notre engagement pour mieux vous servir.</p>
-                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="more-btn">Voir Plus</a>
+                            <a href="Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html" class="more-btn">Voir Plus</a>
                         </div>
                     </div>
                     <div class="service-card" data-aos="fade-left">
-                        <a href="services-single.html" class="card-img">
+                        <a href="Services/Atelier-de-reparation-voitures-et-poids-lourds.html" class="card-img">
                             <img src="assets/img/service_2.jpg" class="ak-bg" alt="...">
                         </a>
                         <div class="card-info">
-                            <a href="services-single.html" class="card-title">Ateliers de réparation et de maintenance pour les voitures et pois lourds</a>
+                            <a href="Services/Atelier-de-reparation-voitures-et-poids-lourds.html" class="card-title">Ateliers de réparation et de maintenance pour les voitures et pois lourds</a>
                             <p class="card-desp">Nos ateliers de réparation et de maintenance sont spécialisés dans l'entretien des voitures et poids lourds. 
                                 Grâce à notre expertise et nos équipements de pointe, 
                                 nous assurons des services rapides et efficaces pour garantir la performance et la sécurité de vos véhicules.</p>
-                            <a href="services-single.html" class="more-btn">Voir Plus</a>
+                            <a href="Services/Atelier-de-reparation-voitures-et-poids-lourds.html" class="more-btn">Voir Plus</a>
                         </div>
                     </div>
                     <div class="service-card" data-aos="fade-left">
-                        <a href="services-single.html" class="card-img">
+                        <a href="Services/Atelier-mobile-pour-voiture.html" class="card-img">
                             <img src="assets/img/service_3.jpg" class="ak-bg" alt="...">
                         </a>
                         <div class="card-info">
-                            <a href="services-single.html" class="card-title">Formation et conseil technique Pneumatique/Lubrifiants de moteur</a>
-                            <p class="card-desp">Nous offrons des formations et des conseils techniques spécialisés en pneumatique et lubrifiants moteur, destinés à optimiser les performances et la longévité de vos équipements. 
-                                Notre expertise vous aide à faire les bons choix et à maintenir vos véhicules en parfait état de fonctionnement.</p>
-                            <a href="services-single.html" class="more-btn">Voir Plus</a>
+                            <a href="Services/Atelier-mobile-pour-voiture.html" class="card-title">Atelier Mobile de reparation pour voiture</a>
+                            <p class="card-desp">
+                                Chez Energy Tires, nous vous simplifions l'entretien automobile grâce à notre service d’atelier mobile. Plus besoin de vous déplacer : nos techniciens qualifiés interviennent directement à votre domicile ou sur votre lieu de travail pour effectuer les réparations et maintenances nécessaires</p>
+                            <a href="Services/Atelier-mobile-pour-voiture.html" class="more-btn">Voir Plus</a>
                         </div>
                     </div>
                 </div>
