--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1 slide-inner">
-                    <img src="assets/img/banner1.png" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner-Hero/banner1.png" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
@@ -131,11 +131,11 @@
                                     <p class="mini-title" data-swiper-parallax="400">Votre référence en pneumatiques, vous garantit performance, sécurité et durabilité. Spécialiste des pneus de qualité, nous vous offrons les meilleures solutions pour tous vos besoins. Roulez en toute confiance avec notre expertise.</p>
                                 </div> -->
                                 <div class="ak-height-45 ak-height-lg-30"></div>
-                                <div data-swiper-parallax="300">
-                                    <a href="appointment.html" class="common-btn">
+                                <!-- <div data-swiper-parallax="300">
+                                    <a href="about.html" class="common-btn">
                                         Découvrir
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1 slide-inner">
-                    <img src="assets/img/banner2.PNG" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner-Hero/banner2.png" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
@@ -153,11 +153,11 @@
                                         Conçus pour optimiser la longévité et l’efficacité de votre véhicule, ils garantissent une lubrification optimale pour une conduite en toute sérénité.</p>
                                 </div> -->
                                 <div class="ak-height-45 ak-height-lg-30"></div>
-                                <div data-swiper-parallax="300">
-                                    <a href="appointment.html" class="common-btn">
+                                <!-- <div data-swiper-parallax="300">
+                                    <a href="about.html" class="common-btn">
                                         Découvrir
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="ak-hero ak-style1  slide-inner">
-                    <img src="assets/img/banner3.PNG" class="ak-hero-bg ak-bg object-cover" alt="...">
+                    <img src="assets/img/banner-Hero/banner3.png" class="ak-hero-bg ak-bg object-cover" alt="...">
                     <div class="container">
                         <div class="hero-slider-info">
                             <div class="slider-info">
@@ -175,11 +175,11 @@
                                         Grâce à notre savoir-faire et à l’utilisation de technologies modernes, nous assurons performance, sécurité et longévité à votre voiture..</p>
                                 </div> -->
                                 <div class="ak-height-45 ak-height-lg-30"></div>
-                                <div data-swiper-parallax="300">
-                                    <a href="appointment.html" class="common-btn">
+                                <!-- <div data-swiper-parallax="300">
+                                    <a href="about.html" class="common-btn">
                                         Découvrir
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
